Fix default spacing of components

--- a/source/_patterns/04-components/button/_button.scss
+++ b/source/_patterns/04-components/button/_button.scss
@@ -3,8 +3,7 @@
 
 .button {
   @include button();
-  @include vertical-spacing(rem(gesso-spacing(xs)));
-  margin: 0;
+  margin-bottom: rem(gesso-spacing(xs));
 
   & + & {
     margin-left: rem(gesso-spacing(xs)); // LTR
