--- a/source/_patterns/04-components/dropbutton/_dropbutton.scss
+++ b/source/_patterns/04-components/dropbutton/_dropbutton.scss
@@ -6,8 +6,8 @@ $dropbutton-toggle-width: 2em !default;
 $dropbutton-toggle-icon-size: rem(12px) !default;
 
 .dropbutton {
-  @include vertical-spacing(rem(gesso-spacing(xs)));
   display: inline-block;
+  margin-bottom: rem(gesso-spacing(xs));
   position: relative;
   vertical-align: top;
 
@@ -54,6 +54,10 @@ $dropbutton-toggle-icon-size: rem(12px) !default;
   list-style: none;
   margin: 0;
   padding: 0;
+
+  li {
+    margin: 0;
+  }
 }
 
 .dropbutton__toggle {
