--- a/source/_patterns/04-components/form-item/_form-item.scss
+++ b/source/_patterns/04-components/form-item/_form-item.scss
@@ -61,7 +61,7 @@ $form-text-size: gesso-base-font-size() !default;
   font-size: rem($form-text-size);
   height: rem(44px);
   line-height: (22px / $form-text-size);
-  margin: 0.2em 0;
+  margin: rem(gesso-spacing(xxs)) 0;
   max-width: 100%;
   padding: em(10px, $form-text-size) em(7px, $form-text-size);
   transition-duration: gesso-duration(short);
