--- a/source/_patterns/04-components/form-item/form-item--checkbox/_form-item--checkbox.scss
+++ b/source/_patterns/04-components/form-item/form-item--checkbox/_form-item--checkbox.scss
@@ -2,7 +2,7 @@
 // Styles for checkbox form items.
 
 .form-item--checkbox {
-  margin-bottom: gesso-spacing(xs);
+  @include vertical-spacing(rem(gesso-spacing(xs)));
 }
 
 .form-item__checkbox {
