--- a/source/_patterns/04-components/pager/_pager.scss
+++ b/source/_patterns/04-components/pager/_pager.scss
@@ -19,6 +19,7 @@ $pager-bp: 600px !default;
 }
 
 .pager__item {
+  @include vertical-spacing(0);
   display: inline-block;
   line-height: 1;
   margin: 0;
